0. Stream API улучшения [#58167] and fixed small bugs